<resources>
    <string name="app_name">app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="my_user">My user</string>
    <string name="message">Message</string>
    <string name="manage">Manage</string>
    <string name="users">Users</string>
    <string name="children">Children</string>
    <string name="no_children">No children</string>
    <string name="groups">Groups</string>
    <string name="no_groups">No groups</string>
    <string name="liabilities">Liabilities</string>
    <string name="news">News</string>
    <string name="documents">Documents</string>
    <string name="import_export">Import, export</string>
    <string name="logout">Logout</string>
    <string name="my_groups">My groups</string>
    <string name="absentees">Absentees</string>
    <string name="polls">Polls</string>
    <string name="full_name">Full name:</string>
    <string name="email">Email:</string>
    <string name="role">Role:</string>
    <string name="messages">Messages</string>
    <string name="parents">Parents</string>
    <string name="teachers">Teachers</string>
    <string name="principals">Principals</string>
    <string name="send">send</string>
    <string name="me">Me</string>
    <string name="send_message">Send Message</string>
    <string name="add_a_new_user">"Add a new User"</string>
    <string name="parent">"Parent"</string>
    <string name="principal">"Principal"</string>
    <string name="teacher">"Teacher"</string>
    <string name="user_suc_reg">"User successfully registered!"</string>
    <string name="email_is_in_use">Email is in use</string>
    <string name="error">ERROR</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="add_a_new_child">Add a new child</string>
    <string name="child_suc_added">Child successfully added!</string>
    <string name="select_a_parent">Please select a parent!</string>
    <string name="select_a_group">Please select a group!</string>
    <string name="select_a_date">Please pick a date!</string>
    <string name="add_a_new_document">Add a new document</string>
    <string name="uploading">Uploading</string>
    <string name="please_wait">Please wait...</string>
    <string name="file_suc_uploaded">File successfully uploaded!</string>
    <string name="select_a_file">Select a file</string>
    <string name="group_suc_added">Group successfully added!</string>
    <string name="teacher_already_has_group_this_year">This teacher already has a group this year!</string>
    <string name="select_a_group_type">Select a group type!</string>
    <string name="select_a_teacher">Please select a teacher!</string>
    <string name="add_liability">Add liability</string>
    <string name="liability_suc_added">Liability successfully added!</string>
    <string name="use_only_num">Please use only numbers.</string>
    <string name="add_a_news">Add a news</string>
    <string name="news_suc_added">News successfully added!</string>
    <string name="add_a_poll">Add a poll</string>
    <string name="poll_suc_added">Poll successfully added!</string>
    <string name="question_cant_be_empty">Question can\'t be empty!</string>
    <string name="option_cant_be_empty">Option can\'t be empty!</string>
    <string name="child">Child</string>
    <string name="no_absences">No absences</string>
    <string name="absences">Absences</string>
    <string name="no_liability">No liability</string>
    <string name="child_suc_removed">Child successfully removed!</string>
    <string name="child_wasnt_deleted_from_group">The child wasn\'t removed from the group!</string>
    <string name="child_wasnt_added_to_group">The child wasn\'t added to the group!</string>
    <string name="sub_updated_suc">Subscription updated!</string>
    <string name="group">Group</string>
    <string name="select">Select</string>
    <string name="finish">Finish</string>
    <string name="upgrade">Upgrade</string>
    <string name="group_suc_finished">The group successfully finished!</string>
    <string name="failed">Failed!</string>
    <string name="group_suc_upgraded">The group successfully upgraded!</string>
    <string name="login_failed">Login was failed!</string>
    <string name="suc_logged_out">Successfully logged out!</string>
    <string name="suc_logged_in">Successfully logged in!</string>
    <string name="already_voted">You have already voted!</string>
    <string name="view_results">View results</string>
    <string name="answer_suc_saved">Answer successfully saved!</string>
    <string name="poll_suc_ended">Poll successfully ended!</string>
    <string name="user_info">User info</string>
    <string name="you_have_no_active_group">You have no active group!</string>
    <string name="add_user">Add user</string>
    <string name="attention">Attention!</string>
    <string name="do_you_want_to_del_doc">Do you want to delete this document?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_finish_group">Do you want to finish this group?</string>
    <string name="import_export_csv">Import export CSV</string>
    <string name="download_completed">Download completed!</string>
    <string name="download_is_not_completed">Download was not completed!</string>
    <string name="downloading_file">Downloading file...</string>
    <string name="shuld_be_csv">The file extension should be .CSV!</string>
    <string name="doc_suc_deleted">Document successfully deleted!</string>
    <string name="my_children">My children</string>
    <string name="you_have_no_children">You have no children yet.</string>
    <string name="do_you_want_to_upgrade_group">Do you want to upgrade this group?</string>
    <string name="results">Results</string>
    <string name="ok">ok</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="add_a_new_group">Add a new group</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_language">Change language</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email2">Email</string>
    <string name="log_in">Log in</string>
    <string name="PARENTS">PARENTS</string>
    <string name="TEACHERS">TEACHERS</string>
    <string name="PRINCIPALS">PRINCIPALS</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="add">Add</string>
    <string name="full_name2">Full name</string>
    <string name="description">Description</string>
    <string name="file_name2">File name:</string>
    <string name="upload">Upload</string>
    <string name="type">Type</string>
    <string name="charge">Charge</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="question">Question</string>
    <string name="add_new_option">Add new option</string>
    <string name="option">Option</string>
    <string name="role2">Role</string>
    <string name="child_name">Child name</string>
    <string name="parent_name">Parent name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="teacher_name">Teacher name</string>
    <string name="group_type">Group type</string>
    <string name="meal_subscription">Meal subscription</string>
    <string name="absences_in_this_year2">Absences in this year:</string>
    <string name="liability_in_this_month2">Liability in this month:</string>
    <string name="year">Year</string>
    <string name="size">Size</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="table">Table</string>
    <string name="import2">IMPORT</string>
    <string name="export">EXPORT</string>
    <string name="absences2">Absences:</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="poll">Poll</string>
    <string name="send_message_to_teacher">Send message to teacher</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="send_message_to_parent">Send message to parent</string>
    <string name="add_to_group">Add to group</string>
    <string name="remove_from_the_group">Remove from the group</string>
    <string name="view_group">View group</string>
    <string name="reply_to2">Reply to:</string>
</resources>
