<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_user"
            android:icon="@drawable/ic_my_user"
            android:title="@string/my_user" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/message" />
    </group>

    <item android:title="@string/manage">
        <menu>
            <group
                android:id="@+id/group_manage"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_users"
                    android:icon="@drawable/ic_users"
                    android:title="@string/users" />
                <item
                    android:id="@+id/nav_children"
                    android:icon="@drawable/ic_children"
                    android:title="@string/children" />
                <item
                    android:id="@+id/nav_groups"
                    android:icon="@drawable/ic_groups"
                    android:title="@string/groups" />
                <item
                    android:id="@+id/nav_news"
                    android:icon="@drawable/ic_news"
                    android:title="@string/news"/>
                <item
                    android:id="@+id/nav_documents"
                    android:icon="@drawable/ic_documents"
                    android:title="@string/documents"/>
                <item
                    android:id="@+id/nav_csv"
                    android:icon="@drawable/ic_csv"
                    android:title="@string/import_export"/>
            </group>
        </menu>
    </item>

    <group android:id="@+id/group_actions">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>