<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_my_user"
            android:icon="@drawable/ic_my_user"
            android:title="@string/my_user"/>
        <item android:id="@+id/nav_my_children"
            android:icon="@drawable/ic_children"
            android:title="@string/my_children"/>
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news"/>
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_documents"
            android:title="@string/documents"/>
        <item
            android:id="@+id/nav_polls"
            android:icon="@drawable/ic_poll"
            android:title="@string/polls" />
    </group>

    <group android:id="@+id/group_actions">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>