<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_a_new_group"
                android:textAlignment="textEnd"
                android:textSize="30sp"
                android:layout_marginBottom="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_group_types"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_group_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_teachers"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher"
                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_teachers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_add_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>