<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activities.AddUserActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_liability"
                android:textAlignment="textEnd"
                android:textSize="30sp"
                android:layout_marginBottom="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_liability_charge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/charge"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_liability_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/exposed_dropdown_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_add_liability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>